Fix on flow list alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1848,7 +1848,7 @@ button:focus {
   }
 
   .flows-list {
-    margin-left: 50px;
+    margin-left: 51px;
   }
 
   .flows-list li {
